# OctoPrint-Cr10_leveling

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml
.stubs/octoprint/: __init__.pyi
.stubs/octoprint/logging/: handlers.pyi
.stubs/octoprint/plugin/: __init__.pyi
.stubs/octoprint/settings/: __init__.pyi
.stubs/octoprint_setuptools/: __init__.pyi
extras/: CR10_Leveling.md  README.txt
octoprint_CR10_Leveling/: __init__.py
octoprint_CR10_Leveling/static/: cr10leveling.js
octoprint_CR10_Leveling/static/js/: CR10_Leveling.js
octoprint_CR10_Leveling/templates/: CR10_Leveling_settings.jinja2  cr10_leveling_settings.jinja2
octoprint_manual_bed_tramming/: __init__.py
octoprint_manual_bed_tramming/static/js/: CR10_Leveling.js  manual_bed_tramming.js
octoprint_manual_bed_tramming/templates/: CR10_Leveling_settings.jinja2
stubs/: sys.pyi
stubs/octoprint/filemanager/: util.pyi
stubs/octoprint/printer/: __init__.pyi  profile.pyi
stubs/octoprint/util/: __init__.pyi
stubs/setuptools/: __init__.pyi
translations/: README.txt
