[metadata]
name = Bed-Leveling
version = 2.1.7
description = Adds bed leveling buttons to the controls tab
author = lsellens
author_email = lsellens@gmail.com
license = AGPLv3
url = https://github.com/lsellens/OctoPrint-Cr10_leveling
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: OctoPrint
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
    OctoPrint

[options.package_data]
octoprint_CR10_Leveling = templates/*, static/*, translations/*

[options.entry_points]
octoprint.plugin =
    CR10_Leveling = octoprint_CR10_Leveling

[bdist_wheel]
universal = true
